--- a/client/templates/layouts/contest/contestCreateLayout.jade
+++ b/client/templates/layouts/contest/contestCreateLayout.jade
@@ -1,5 +1,5 @@
 template(name='contestCreateLayout')
   div(class='contest-create-container')
-    div(class='col-xs-24')
+    div(class='col-md-24')
       div(class='row')
         +contestCreate
