--- a/client/templates/layouts/entries/entriesLayout.jade
+++ b/client/templates/layouts/entries/entriesLayout.jade
@@ -1,5 +1,5 @@
 template(name='entryLayout')
   div(class='entry-container')
-    div(class='col-xs-24')
+    div(class='col-md-24')
       div(class='row')
         +entryView
