--- a/client/templates/layouts/navLayout/navLayout.sass
+++ b/client/templates/layouts/navLayout/navLayout.sass
@@ -136,13 +136,13 @@ $navHighlightHeight: 3px
   height: 50px
 
 #globalContainer
-  width: 1024px
+  width: 968px // 100% //
   background-color: white
   margin: auto
   padding: 15px 15px 50px 15px
 
 .wrapper
   width: 100%
-  background-image: url('/images/stadium_streaming_light_1440.png')
+  background-image: url('/images/stadium_streaming_light_1280_600.png')
   background-repeat: no-repeat
-  background-size: cover
+  background-size:  100% 100% //cover
