--- a/client/templates/lobby/promotions.jade
+++ b/client/templates/lobby/promotions.jade
@@ -1,4 +1,4 @@
 template(name='featuredPromotions')
-	div(id='featured-promotions' class='col-xs-24')
+	div(id='featured-promotions' class='col-md-24')
 
 template(name='promotions')
