--- a/client/templates/navFooter/footer.jade
+++ b/client/templates/navFooter/footer.jade
@@ -1,2 +1,15 @@
 template(name='footer')
-	h5 Footer Here Dawg
+	div('col-md-24')
+		div('row')
+			div('col-md-5')
+				div('row') How to Play
+				div('row') About
+				div('row') 100% Legal
+				div('row') Scoring
+				div('row') Sports
+			div('col-md-5')
+				div('row') Careers
+				div('row') Team
+				div('row') How we started
+			div('col-md-5')
+				div('row') Address
