--- a/client/templates/accounts/myLogin.jade
+++ b/client/templates/accounts/myLogin.jade
@@ -1,5 +1,5 @@
 template(name='myLogin')
-  div(class='col-xs-12')
-  div(class='col-xs-12')
+  div(class='col-md-12')
+  div(class='col-md-12')
     div(class='row event-filters')
       +atForm
