--- a/client/templates/administrator/fixture/fixtureCreate.jade
+++ b/client/templates/administrator/fixture/fixtureCreate.jade
@@ -1,7 +1,7 @@
 template(name='fixtureCreate')
-  div(class='col-xs-24')
+  div(class='col-md-24')
     div(class='row')
-      div(class='col-xs-6')
+      div(class='col-md-6')
         h4 Step 1: Update Events
         select(id='event-sport-select')
           option(value='NFL') NFL Playoff Week
@@ -9,27 +9,27 @@ template(name='fixtureCreate')
           option(value='3') 3
           option(value='4') 4
         div(class='btn btn-sm btn-default update-events') Update Events
-      div(class='col-xs-6')
+      div(class='col-md-6')
         h4 Step 2: Create a Fixture
         +each allFutureEvents
           div(class='event-options cursor') {{momentify startsAt}} #{home} #{away}
         div(class='btn btn-sm btn-default create-fixture') Create Fixture
-      div(class='col-xs-6')
+      div(class='col-md-6')
         div(class='row')
-          div(class='col-xs-24')
+          div(class='col-md-24')
             h4 Step 3. View Fixtures
         +each fixtures
           div(class='row fixture-item')
-            div(class='col-xs-4')
+            div(class='col-md-4')
               span
                 h6 {{ fixturesEventCount }} Events
-            div(class='col-xs-16') 
+            div(class='col-md-16') 
               +each fixturesEvents
                 div(class='row')
-                  div(class='col-xs-24 size-12') {{momentify startsAt}} #{away} @ #{home}
-            div(class='col-xs-2 remove-fixture')
+                  div(class='col-md-24 size-12') {{momentify startsAt}} #{away} @ #{home}
+            div(class='col-md-2 remove-fixture')
               i(class='fa fa-minus-circle pointer')
-      div(class='col-xs-6')
+      div(class='col-md-6')
         h4 Step 4. Create Contests
         div(class='btn btn-sm btn-default')
           a(href="{{pathFor 'contestCreateLayout' }}") Create Contests!
