--- a/client/templates/administrator/score/score.jade
+++ b/client/templates/administrator/score/score.jade
@@ -1,19 +1,19 @@
 template(name='score')
-  div(class='col-xs-24')
+  div(class='col-md-24')
     div(class='row')
-      div(class='col-xs-4')
+      div(class='col-md-4')
         h4 Step 1: Update Events
         div(class='btn btn-sm btn-default update-events') Update Events
-      div(class='col-xs-4')
+      div(class='col-md-4')
         h4 Step 2: Create Event Stats
         +each liveEvents
           div(class='event-options cursor')  #{sport}: #{away} @ #{home} {{momentify startsAt}} 
         div(class='btn btn-sm btn-default update-event-stats') Update EventStats
-      div(class='col-xs-4')
+      div(class='col-md-4')
         h4 Step 3: Convert to Athlete Event Stats
         +each liveEvents
           div(class='event-options cursor')  #{sport}: #{away} @ #{home} {{momentify startsAt}} 
         div(class='btn btn-sm btn-default create-athlete-event-stats') Convert
-      div(class='col-xs-6')
+      div(class='col-md-6')
         h4 Step 4. Score
         div(class='btn btn-sm btn-default score-stats') Score Em! 
