--- a/client/templates/contestLists/historyContestList/historyContests.jade
+++ b/client/templates/contestLists/historyContestList/historyContests.jade
@@ -1,18 +1,18 @@
 template(name='historyContestListContainer')
   div(class='history-contest-list')
-    div(class='col-xs-24')
+    div(class='col-md-24')
       div(class='row')
-        h1(id='history-contest-title' class='col-xs-16') Entry history
+        h1(id='history-contest-title' class='col-md-16') Entry history
       div(class='row')
-        h4(class='col-xs-8') You have #{ historyEntriesCount } contest entries in your history.
+        h4(class='col-md-8') You have #{ historyEntriesCount } contest entries in your history.
       div(class='row')
-        h3(class='col-xs-4') Contest
-        h3(class='col-xs-3') Entry ID
-        h3(class='col-xs-6') Entry
+        h3(class='col-md-4') Contest
+        h3(class='col-md-3') Entry ID
+        h3(class='col-md-6') Entry
       +each historyContests
         div(class='row')
-          div(class='col-xs-4') 
+          div(class='col-md-4') 
             a(href="{{ pathFor 'entryLayout' }}") #{ contestName }
-          div(class='col-xs-3')
+          div(class='col-md-3')
             a(href="{{ pathFor 'entryLayout' }}") {{ truncate _id 'last' 4 }}
-          div(class='col-xs-6') $#{ entryFee }
+          div(class='col-md-6') $#{ entryFee }
