--- a/client/templates/contestLists/liveContestList/liveContests.jade
+++ b/client/templates/contestLists/liveContestList/liveContests.jade
@@ -1,16 +1,16 @@
 template(name='liveContestListContainer')
   div(class='live-contest-list')
-    div(class='col-xs-24')
+    div(class='col-md-24')
       div(class='row')
-        h1(id='live-contest-title' class='col-xs-16') Live entries
+        h1(id='live-contest-title' class='col-md-16') Live entries
       div(class='row')
-        h4(class='col-xs-8') You have #{ liveEntriesCount } contest entries live.
+        h4(class='col-md-8') You have #{ liveEntriesCount } contest entries live.
       div(class='row')
-        h3(class='col-xs-3') Contest ID
-        h3(class='col-xs-6') Name
-        h3(class='col-xs-6') Entry
+        h3(class='col-md-3') Contest ID
+        h3(class='col-md-6') Name
+        h3(class='col-md-6') Entry
       +each liveContests
         div(class='row')
-          div(class='col-xs-3') #{contestId}
-          div(class='col-xs-6') #{contestName}
-          div(class='col-xs-6') $#{entryFee}
+          div(class='col-md-3') #{contestId}
+          div(class='col-md-6') #{contestName}
+          div(class='col-md-6') $#{entryFee}
