--- a/client/templates/layouts/contest/contestLayout.jade
+++ b/client/templates/layouts/contest/contestLayout.jade
@@ -1,7 +1,7 @@
 //- Template contestLayout is currently rendered with data context from Router
 template(name='contestLayout')
   div(class='contest')
-    div(class='col-xs-24')
+    div(class='col-md-24')
       div(class='row')
         +contestTitle
       div(class='row')
