--- a/client/templates/layouts/contest/fixtureCreateLayout.jade
+++ b/client/templates/layouts/contest/fixtureCreateLayout.jade
@@ -1,5 +1,5 @@
 template(name='fixtureCreateLayout')
   div(class='fixture-create-container')
-    div(class='col-xs-24')
+    div(class='col-md-24')
       div(class='row')
         +fixtureCreate
