--- a/client/templates/layouts/lobby/lobbyLayout.jade
+++ b/client/templates/layouts/lobby/lobbyLayout.jade
@@ -1,6 +1,6 @@
 template(name='lobbyLayout')
   div(class='lobby')
-    div(class='col-xs-24')
+    div(class='col-md-24')
       div(class='row footerPre') 
         +featuredPromotions
       div(class='row') 
