--- a/client/templates/lobby/contestItem.jade
+++ b/client/templates/lobby/contestItem.jade
@@ -1,20 +1,21 @@
 template(name="contestItem")
   div(class='row contestResultItem size-12')
-    div(class='col-xs-8 vAlign contestModal title' data-toggle='modal' data-target='#contestModal-#{_id}' data-name='#{contestName}') #{contestName}
-    div(class='col-xs-2 vAlign contestModal' data-toggle='modal' data-target='#contestModal-#{_id}' data-name='#{contestName}') $#{prizes}
-    div(class='col-xs-2 vAlign contestModal' data-toggle='modal' data-target='#contestModal-#{_id}' data-name='#{contestName}') #{entryCount} / #{entrySize}
-    div(class='col-xs-1 vAlign contestModal' data-toggle='modal' data-target='#contestModal-#{_id}' data-name='#{contestName}') $#{entryFee}
+    div(class='col-md-8 vAlign contestModal title' data-toggle='modal' data-target='#contestModal-#{_id}' data-name='#{contestName}') #{contestName}
+    div(class='col-md-2 vAlign contestModal' data-toggle='modal' data-target='#contestModal-#{_id}' data-name='#{contestName}') $#{prizes}
+    div(class='col-md-2 vAlign contestModal' data-toggle='modal' data-target='#contestModal-#{_id}' data-name='#{contestName}') #{entryCount} / #{entrySize}
+    div(class='col-md-1 vAlign contestModal' data-toggle='modal' data-target='#contestModal-#{_id}' data-name='#{contestName}') $#{entryFee}
     +if guaranteedPrizes
-      div(class='col-xs-1 contestIcons vAlign')
+      div(class='col-md-1 contestIcons vAlign')
         span(class='contestGuaranteedPayIcon') G
     +else
-      div(class='col-xs-1')
+      div(class='col-md-1')
     +if multipleEntries
-      div(class='col-xs-1 contestIcons vAlign')
+      div(class='col-md-1 contestIcons vAlign')
         span(class='contestMultiEntryIcon') M
     +else
-      div(class='col-xs-1')
-    div(class='col-xs-3 vAlign contestModal' data-toggle='modal' data-target='#contestModal-#{_id}' data-name='#{contestName}') {{momentify startsAt}}
-    div(class='col-xs-2 vAlign')
+      div(class='col-md-1')
+    div(class='col-md-4 vAlign contestModal' data-toggle='modal' data-target='#contestModal-#{_id}' data-name='#{contestName}') {{momentify startsAt}}
+    div(class='col-md-4 vAlign')
       button(class='btn btn-default btn-sm contestEnterButton')
         a(href='/contest/#{_id}/draftteam') ENTER
+    div(class='clearfix')
