--- a/client/templates/lobby/contestItems.jade
+++ b/client/templates/lobby/contestItems.jade
@@ -1,15 +1,15 @@
 template(name="contestItems")
-  div(id="contestResultsContainer" class='col-xs-24')
+  div(id="contestResultsContainer" class='col-md-24')
     div(class="row")
-      div(id='contestResultsTableContainer' class='col-xs-24')
+      div(id='contestResultsTableContainer' class='col-md-24')
         div(id='contestResultsTableHeader' class='row sysLabelText paddingTB-10 size-12')
-          div(class='col-xs-8') Contest
-          div(class='col-xs-2') Prizes
-          div(class='col-xs-2') Entries
-          div(class='col-xs-1') Entry
-          div(class='col-xs-4') Starts (ET)
+          div(class='col-md-8') Contest
+          div(class='col-md-2') Prizes
+          div(class='col-md-2') Entries
+          div(class='col-md-1') Entry
+          div(class='col-md-4') Starts (ET)
         div(class='row')
-          div(id='contestResultsTable' class='col-xs-24')
+          div(id='contestResultsTable' class='col-md-24')
             div(class='contestScrollableContainer')
               div(class='row contestResultsBlankItem')
               +each contests
