--- a/client/templates/contests/draftTeam/contests.sass
+++ b/client/templates/contests/draftTeam/contests.sass
@@ -37,7 +37,7 @@ $lightBlue: #3f96cb
     height: 60px
 
 .fa-plus-circle
-    // color: $accent-highlight
+    color: $fa-plus
     font-size: 22px
 
 .fa-minus-circle
