--- a/client/templates/navFooter/footer.jade
+++ b/client/templates/navFooter/footer.jade
@@ -1,15 +1,12 @@
 template(name='footer')
-	div('col-md-24')
-		div('row')
-			div('col-md-5')
-				div('row') How to Play
-				div('row') About
-				div('row') 100% Legal
-				div('row') Scoring
-				div('row') Sports
-			div('col-md-5')
-				div('row') Careers
-				div('row') Team
-				div('row') How we started
-			div('col-md-5')
-				div('row') Address
+	div(class='col-md-24')
+		div(class='row headspace-20')
+			div(class='col-md-6')
+			div(class='col-md-5')
+				div(class='row') How to Play
+				div(class='row') About
+				div(class='row') 100% Legal
+				div(class='row') Scoring
+				div(class='row') Sports
+			div(class='col-md-5')
+				div(class='row') Team
