--- a/client/templates/entries/entry.jade
+++ b/client/templates/entries/entry.jade
@@ -1,8 +1,12 @@
 template(name='entryView')
-  div(class='col-md-24')
+  div(class='col-md-24 entry-view')
     div(class='row')
-      h2 {{ formatScore totalScore }}
+      div(class='col-md-push-11 col-md-4')
+        //- format the totalScore attribute on the entry, uses template helpers to achieve effect
+        span(class='point-score') {{ pointScore totalScore }}
+        span(class='decimal-score') .{{ decimalScore totalScore }}
     div(class='row')
+      div(class='col-md-1')
       each roster
         +AnimateWithVelocity
           div(class='col-md-2' data-animate data-property="opacity" data-duration="1000" data-from-value="0" data-to-value="1")
