--- a/client/templates/layouts/navLayout/navLayout.sass
+++ b/client/templates/layouts/navLayout/navLayout.sass
@@ -9,11 +9,10 @@ $navbarDarkGray: #2d2d2d
 $navbarLightGrayText: #dfdfdf
 
 $navHighlightHeight: 3px
+
 // Progress Bar
 // https://github.com/Multiply/iron-router-progress
 //
-
-
 #iron-router-progress
   background-color : $progressbar-color
   box-shadow       : 0 0 4px $progressbar-color
@@ -24,7 +23,7 @@ $navHighlightHeight: 3px
   height: 10px
 
 // Login Buttons
-
+//
 .login
   float: right
   margin-right: 60px
@@ -123,7 +122,6 @@ $navHighlightHeight: 3px
 .headerBar
   width: 100%
   height: 120px
-  margin-bottom: 70px
   background-image: url("/images/triangle_green.svg")
 
 #footerContainer
@@ -136,12 +134,16 @@ $navHighlightHeight: 3px
   height: 50px
 
 #globalContainer
-  width: 968px // 100% //
+  width: 1100px // 100% //
   background-color: white
   margin: auto
   padding: 15px 15px 50px 15px
 
-.wrapper
+.wrapper-main
+  width: 100%
+  background-color: black
+
+.wrapper-body
   width: 100%
   background-image: url('/images/stadium_streaming_light_1280_600.png')
   background-repeat: no-repeat
