--- a/client/templates/entries/entry.jade
+++ b/client/templates/entries/entry.jade
@@ -5,8 +5,9 @@ template(name='entryView')
         //- format the totalScore attribute on the entry, uses template helpers to achieve effect
         span(class='point-score') {{ pointScore totalScore }}
         span(class='decimal-score') .{{ decimalScore totalScore }}
-    div(class='row')
-      div(class='col-md-1')
+    div(class='row player-row')
+      //- TODO: responsive to size
+      div(class='col-md-4') 
       each roster
         +AnimateWithVelocity
           div(class='col-md-2' data-animate data-property="opacity" data-duration="1000" data-from-value="0" data-to-value="1")
