--- a/client/templates/entries/entry.jade
+++ b/client/templates/entries/entry.jade
@@ -18,7 +18,7 @@ template(name='entryView')
               div #{ value } #{ type }
     div(class='row')
       +AnimateWithVelocity
-        div(class='col-md-10 col-md-offset-10' data-animate data-property="opacity" data-duration="3500" data-from-value="0" data-to-value="1")
+        div(class='col-md-10 col-md-offset-9' data-animate data-property="opacity" data-duration="3500" data-from-value="0" data-to-value="1")
           span
             div(class='btn btn-default') 
               a(href="{{ pathFor 'contestLayout' }}") Enter Again
@@ -26,7 +26,11 @@ template(name='entryView')
             div(class='btn btn-default') 
               a(href="{{ pathFor 'upcomingContestListLayout' }}") View Entries
 
-template(name='entryViewNames')
+template(name='entryViewMini')
+  div(class='row player-row')
     each roster
-      div #{last_name}
-   
+      +AnimateWithVelocity
+        span(class='col-md-2' data-animate data-property="opacity" data-duration="1000" data-from-value="0" data-to-value="1")
+          img(class='entry-view-mini' src="{{playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
+          div #{ last_name }, #{ first_name }
+          div #{ score }
