--- a/client/templates/lobby/contestModal.jade
+++ b/client/templates/lobby/contestModal.jade
@@ -22,6 +22,5 @@ template(name="contestModal")
               div #{ away } @ #{ home } {{ momentify startsAt }}
           div(role="tabpanel" class='tab-pane' id='prizes') #{ readablePrizePayouts }
       div(class="modal-footer")
-        button(type="button" class="btn btn-primary" data-dismiss="modal") Close
-        button(type="button" class="btn btn-default")
-          a(href='/contest/#{ _id }/draftteam') Enter
+        a(class="btn btn-primary" data-dismiss="modal") Close
+        a(class="btn btn-default" href='/contest/#{ _id }/draftteam') Enter
