--- a/client/templates/entries/entry.jade
+++ b/client/templates/entries/entry.jade
@@ -1,7 +1,9 @@
 template(name='entryView')
   div(class='col-md-24 entry-view')
     div(class='row')
-      div(class='col-md-push-11 col-md-4')
+      div(class='col-md-push-11 col-md-4 font-jersey contest-name') #{ contestName }
+    div(class='row')
+      div(class='col-md-push-8 col-md-8')
         //- format the totalScore attribute on the entry, uses template helpers to achieve effect
         span(class='point-score') {{ pointScore totalScore }}
         span(class='decimal-score') .{{ decimalScore totalScore }}
