--- a/client/templates/nav/nav.jade
+++ b/client/templates/nav/nav.jade
@@ -24,16 +24,7 @@ template(name='nav')
             a(href="{{ pathFor 'liveContestListLayout' }}" class="{{ isActiveRoute regex='liveContestListLayout' }}") LIVE
           li
             a(href="{{ pathFor 'historyContestListLayout' }}" class="{{ isActiveRoute regex='historyContestListLayout' }}") HISTORY
-          li(class="dropdown")
-            a(href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false") ADMIN
-              span(class="caret")
-            ul(class="dropdown-menu" role="menu")
-              li
-                a(href="{{ pathFor 'fixtureCreateLayout' }} ") FIXTURES
-              li
-                a(href="{{pathFor 'contestCreateLayout' }}") CONTESTS
-              li
-                a(href="{{pathFor 'scoreLayout' }}") SCORE YAHZTE!
+          +_navAdmin
           li
             a(href="{{ pathFor 'historyContestListLayout' }}" class="{{ isActiveRoute regex='historyContestListLayout' }}") $0.00
         ul(class="nav navbar-nav navbar-right")
