make event scoring more extensible

--- a/client/templates/nav/_navAdmin.html
+++ b/client/templates/nav/_navAdmin.html
@@ -1,3 +1,4 @@
+<!-- HTML Template since {{#if isInRole 'admin'}} cannot be used in jade currently -->
 <template name='_navAdmin'>
   {{#if isInRole 'admin'}}
     <li class="dropdown" >
