--- a/client/templates/administrator/score/score.jade
+++ b/client/templates/administrator/score/score.jade
@@ -8,7 +8,7 @@ template(name='score')
         h4 Step 2: Create Event Stats
         +each liveEvents
           div(class='event-options cursor')  #{sport}: #{away} @ #{home} {{momentify startsAt}} 
-        div(class='btn btn-sm btn-default update-event-stats') Update EventStats
+          div(class='btn btn-sm btn-default update-event-stats') Update EventStats
       div(class='col-md-4')
         h4 Step 3: Convert to Athlete Event Stats
         +each liveEvents
@@ -16,4 +16,6 @@ template(name='score')
           div(class='btn btn-sm btn-default create-athlete-event-stats') Convert
       div(class='col-md-6')
         h4 Step 4. Score
-        div(class='btn btn-sm btn-default score-stats') Score Em! 
+        +each liveEvents
+          div(class='event-options cursor')  #{sport}: #{away} @ #{home} {{momentify startsAt}} 
+          div(class='btn btn-sm btn-default score-stats') Score Em! 
