--- a/client/templates/administrator/score/score.jade
+++ b/client/templates/administrator/score/score.jade
@@ -19,3 +19,6 @@ template(name='score')
         +each liveEvents
           div(class='event-options cursor')  #{sport}: #{away} @ #{home} {{momentify startsAt}} 
           div(class='btn btn-sm btn-default score-stats') Score Em! 
+      div(class='col-md-6')
+        h4 Step 5. Add Total Score to Entries
+          div(class='btn btn-sm btn-default score-entries') Add total Scores to Entries
