--- a/client/templates/entries/entry.jade
+++ b/client/templates/entries/entry.jade
@@ -1,9 +1,9 @@
 template(name='entryView')
   div(class='col-md-24 entry-view')
     div(class='row')
-      div(class='col-md-push-9 col-md-8 font-jersey contest-name') #{ contestName }
+      div(class='col-md-push-8 col-md-9 font-jersey contest-name') #{ contestName }
     div(class='row')
-      div(class='col-md-push-11 col-md-6')
+      div(class='col-md-push-10 col-md-6')
         //- format the totalScore attribute on the entry, uses template helpers to achieve effect
         span(class='point-score') {{ pointScore totalScore }}
         span(class='decimal-score') .{{ decimalScore totalScore }}
@@ -15,7 +15,7 @@ template(name='entryView')
           div(class='col-md-2' data-animate data-property="opacity" data-duration="1000" data-from-value="0" data-to-value="1")
             img(src="{{playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
             div #{ last_name }, #{ first_name }
-            div #{ score }
+            div(class='font-jersey size-22') #{ score }
             each relevantStats
               div #{ value } #{ type }
     div(class='row')
