add in filters for NBA and NFL

--- a/client/templates/contests/draftTeam/contests.jade
+++ b/client/templates/contests/draftTeam/contests.jade
@@ -27,19 +27,10 @@ template(name='contestLineupContainer')
         div(class='row position-filters size-13 pointer')
           div(class='col-md-2 position-filter-tab')
             div(class='position-filter vAlign') All
-          div(class='col-md-2 position-filter-tab')
-            div(class='position-filter vAlign') QB
-          div(class='col-md-2 position-filter-tab')
-            div(class='position-filter vAlign') RB
-          div(class='col-md-2 position-filter-tab')
-            div(class='position-filter vAlign') WR
-          div(class='col-md-2 position-filter-tab')
-            div(class='position-filter vAlign') TE
-          div(class='col-md-2 position-filter-tab')
-            div(class='position-filter vAlign') K
-          div(class='col-md-2 position-filter-tab')
-            div(class='position-filter vAlign') D
-          div(class='col-md-6 col-md-push-4 position-filter-tab')
+          each positionFilters
+            div(class='col-md-2 position-filter-tab')
+              div(class='position-filter vAlign') {{ this }}
+          div(class='col-md-6 position-filter-tab')
             div(class='position-filter vAlign') Player search...
         div(class='row player-list-table-header size-12')
           div(class='col-md-4 player-list-table-title vAlign') Pos
