--- a/client/templates/administrator/fixture/fixtureCreate.jade
+++ b/client/templates/administrator/fixture/fixtureCreate.jade
@@ -12,7 +12,7 @@ template(name='fixtureCreate')
       div(class='col-md-6')
         h4 Step 2: Create a Fixture
         +each allFutureEvents
-          div(class='event-options cursor') {{momentify startsAt}} #{home} #{away}
+          div(class='event-options cursor') {{momentify startsAt 'longDateTime'}} #{home} #{away}
         div(class='btn btn-sm btn-default create-fixture') Create Fixture
       div(class='col-md-6')
         div(class='row')
