--- a/client/templates/contests/draftTeam/contests.jade
+++ b/client/templates/contests/draftTeam/contests.jade
@@ -46,7 +46,7 @@ template(name='contestLineupContainer')
               div(class='row player-list-item size-13 {{#if inCurrentLineup}}selected-player{{/if}}')
                 div(class='col-md-1 player-position vAlign') #{position}
                 div(class='col-md-3 player-image vAlign')
-                  img(class='player-photo' src= "{{ playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
+                  img(class='player-photo' src= "{{ playerImageESPN espn_id = espn_id espn_size = 'micro' sport=sport }}")
                 div(class='col-md-6 player-name vAlign') #{full_name}
                 div(class='col-md-2 player-fppg vAlign') --
                 div(class='col-md-1 player-played vAlign') -
@@ -79,7 +79,7 @@ template(name='contestLineupContainer')
                 +AnimateWithVelocity
                   div(class='row lineup-player-selection size-13')
                     div(class='col-md-4 lineup-player-image vAlign' data-animate data-property="opacity" data-duration="1000" data-from-value="0" data-to-value="1")
-                      img(class='player-photo' src= "{{ playerImageESPN espn_id = espn_id espn_size = 'small'}}")
+                      img(class='player-photo' src= "{{ playerImageESPN espn_id = espn_id espn_size = 'small' sport=sport }}")
                     div(class='col-md-2 lineup-player-position vAlign') #{position}
                     div(class='col-md-8 lineup-player-name vAlign') #{full_name}
                     div(class='col-md-2 lineup-player-salary vAlign') ${{addCommas salary}}
