--- a/client/templates/entries/entry.jade
+++ b/client/templates/entries/entry.jade
@@ -14,7 +14,7 @@ template(name='entryView')
       each roster
         +AnimateWithVelocity
           div(class='col-md-2' data-animate data-property="opacity" data-duration="1000" data-from-value="0" data-to-value="1")
-            img(src="{{playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
+            img(src="{{playerImageESPN espn_id=espn_id espn_size='micro' sport=sport }}")
             div #{ last_name }, #{ first_name }
             div(class='font-jersey size-22') #{ score }
             each relevantStats
