--- a/client/templates/entries/entry.jade
+++ b/client/templates/entries/entry.jade
@@ -32,6 +32,9 @@ template(name='entryViewMini')
     each roster
       +AnimateWithVelocity
         span(class='col-md-2' data-animate data-property="opacity" data-duration="1000" data-from-value="0" data-to-value="1")
-          img(class='entry-view-mini' src="{{playerImageESPN espn_id = espn_id espn_size = 'micro' sport=sport }}")
+          if sport
+            img(class='entry-view-mini' src="{{playerImageESPN espn_id = espn_id espn_size = 'micro' sport=sport }}")
+          else //- NOTE: REMOVE THIS IF ELSE Once 'NFL' is stored on All Rosters
+            img(class='entry-view-mini' src="{{playerImageESPN espn_id = espn_id espn_size = 'micro' sport='NFL' }}")
           div #{ last_name }, #{ first_name }
           div #{ score }
