got events back up and running

--- a/client/lib/stylesheets/custom.bootstrap.import.less
+++ b/client/lib/stylesheets/custom.bootstrap.import.less
@@ -11,6 +11,13 @@
 // Variables
 // --------------------------------------------------
 
+//
+@form-group-margin-bottom: 10px;
+@btn-border-radius-base: 5px; 
+@btn-border-radius-small: 3px; 
+@btn-border-radius-large: 8px;
+@jumbotron-heading-font-size: 50px; 
+@zindex-modal-background: 2; 
 
 //== Colors
 //
